feat: add New Article skeleton

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -14,6 +14,7 @@
         <Compile Include="Components\PageRegister.fs" />
         <Compile Include="Components\PageLogin.fs" />
         <Compile Include="Components\PageHome.fs" />
+        <Compile Include="Components\PageNewArticle.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
