--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <Compile Include="Helper.fs" /> 
+    <Compile Include="Users.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <ItemGroup>
