home.htmlを返すように

--- a/realworld/src/main/resources/application.properties
+++ b/realworld/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.devtools.remote.restart.enabled=true
 spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
