Implement User feature and authentication

--- a/Conduit/src/Conduit.API/appsettings.json
+++ b/Conduit/src/Conduit.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": ""
+  },
+  "AuthSettings": {
+    "SecretKey": "thisismysupersecretkeynobodyknowshowcantheyknow",
+    "Issuer": "Issuer",
+    "Audience": "Audience"
   }
 }
