default to database/sql

--- a/dev.env
+++ b/dev.env
@@ -1,8 +1,15 @@
+ENVIRONMENT=dev
+HOST=localhost
+PORT=8086
+
 DB_USERNAME=demouser
 DB_PASSWORD=demopassword
 DB_HOSTNAME=localhost
 DB_PORT=5432
 DB_DBNAME=conduitdb
+DB_DBNAME_TEST=conduitdb_test
+MIGRATION_PATH=db/migration
+DB_RECREATE=true
 
-TOKEN_HOUR_LIFESPAN=24
-API_SECRET=secret
+API_SECRET=randomapisecretwithatleast32characters
+TOKEN_HOUR_LIFESPAN=24h
