--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,15 +6,13 @@ sql:
     gen:
       go:
         package: "db"
-        sql_package: "pgx/v4"
+        sql_package: "database/sql"
         # sql_package: "database/sql"
         out: "./db/sqlc"
         emit_interface: true                 
         emit_json_tags: true                 
         emit_pointers_for_null_types: true
-        # overrides:
-        #   - nullable: true
-        #     db_type: "varchar"
-        #     go_type:
-        #       type: "string"
-        #       pointer: true 
+        overrides:
+          - db_type: "uuid"
+            go_type: "github.com/gofrs/uuid.UUID"
+               
