--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -12,7 +12,5 @@ sql:
         emit_interface: true                 
         emit_json_tags: true                 
         emit_pointers_for_null_types: true
-        overrides:
-          - db_type: "uuid"
-            go_type: "github.com/gofrs/uuid.UUID"
+        emit_result_struct_pointers: true
                
