--- a/api/test.env
+++ b/api/test.env
@@ -8,7 +8,7 @@ DB_HOSTNAME=localhost
 DB_PORT=5433
 DB_DBNAME=devdb
 DB_DBNAME_TEST=conduitdb_test
-MIGRATION_PATH=db/migration
+MIGRATION_PATH=../db/migration
 DB_RECREATE=true
 
 API_SECRET=randomapisecretwithatleast32characters
