feat(#2): 회원 가입 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // Jackson : Json Library
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+
 }
 
 test {
