--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     // Jackson : Json Library
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 
+    // jjwt : JSON Web Token for Java
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5', 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 }
 
 test {
