--- a/dev.env
+++ b/dev.env
@@ -1,12 +1,12 @@
 ENVIRONMENT=dev
 HOST=localhost
-PORT=8086
+PORT=8085
 
-DB_USERNAME=devuser
-DB_PASSWORD=devpass
+DB_USERNAME=demouser
+DB_PASSWORD=demopassword
 DB_HOSTNAME=localhost
-DB_PORT=5433
-DB_DBNAME=devdb
+DB_PORT=5432
+DB_DBNAME=conduitdb
 DB_DBNAME_TEST=conduitdb_test
 MIGRATION_PATH=db/migration
 DB_RECREATE=true
