--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -13,4 +13,7 @@ sql:
         emit_json_tags: true                 
         emit_pointers_for_null_types: true
         emit_result_struct_pointers: true
+        overrides:
+        - db_type: "uuid"
+          go_type: "string"
                
