--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/server",
     "start": "NODE_ENV=development nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
@@ -27,6 +27,8 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -46,7 +48,8 @@
     "@compodoc/compodoc": "^1.1.19",
     "@nestjs/cli": "^8.2.4",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@types/aws-lambda": "^8.10.100",
+    "@types/aws-serverless-express": "^3.3.5",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
@@ -54,12 +57,7 @@
     "@types/node": "^16.11.10",
     "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
     "axios": "^0.26.1",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "lorem-ipsum": "^2.0.4",
     "prettier": "^2.3.2",
