--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 services:
-  magazine:
-    container_name: magazine-app
+  api:
     build: .
     ports:
       - '3001:3000'
@@ -8,7 +7,6 @@ services:
       DB_URL: postgres://postgres:postgres@postgres:5432/magazine
 
   postgres:
-    container_name: magazine-postgres
     image: postgres
     environment:
       POSTGRES_USER: postgres
