--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -34,14 +34,12 @@ jobs:
           cache-dependency-path: package-lock.json
 
       - run: npm install
-
-      - uses: docker/setup-buildx-action@v2
-
       - name: Running unit tests
         run: npm run test:unit
         shell: bash
 
       - name: Starting localhost server
+        shell: sh
         run: |
           npm run build
           nohup npm run start:prod &
@@ -50,6 +48,8 @@ jobs:
 
       - name: Running acceptance tests on localhost server
         run: API_URL=http://localhost:3000/api npm run test:acceptance
+
+      - uses: docker/setup-buildx-action@v2
 
       - id: build
         uses: docker/build-push-action@v3
@@ -61,6 +61,7 @@ jobs:
           tags: 'app'
 
       - name: Starting docker server
+        shell: sh
         run: |
           nohup docker run --rm -d -p 3001:3000 --name app app &
           chmod +x ./scripts/wait_for_status.sh
