--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -44,7 +44,7 @@ jobs:
           npm run build
           nohup npm run start:prod &
           chmod +x ./scripts/wait_for_status.sh
-          URL='http://localhost:3000/api/health' ./scripts/wait_for_status.sh 200
+          ./scripts/wait_for_status.sh http://localhost:3000/api/health 200
 
       - name: Running acceptance tests on localhost server
         run: API_URL=http://localhost:3000/api npm run test:acceptance
@@ -65,7 +65,7 @@ jobs:
         run: |
           nohup docker run --rm -d -p 3001:3000 --name app app &
           chmod +x ./scripts/wait_for_status.sh
-          URL='http://localhost:3001/api/health' ./scripts/wait_for_status.sh 200
+          ./scripts/wait_for_status.sh http://localhost:3001/api/health 200
 
       - name: Running acceptance tests on docker server
         run: API_URL=http://localhost:3001/api npx jest acceptance
