--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -63,9 +63,10 @@ jobs:
       - name: Starting docker server
         shell: sh
         run: |
-          nohup docker run --rm -d -p 3001:3000 --name app app &
+          nohup docker run --rm -d --name app app &
+          IP=$(docker container inspect app --format '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}')
           chmod +x ./scripts/wait_for_status.sh
-          ./scripts/wait_for_status.sh http://localhost:3001/api/health 200
+          ./scripts/wait_for_status.sh http://"$IP":3000/api/health 200
 
       - name: Running acceptance tests on docker server
         run: API_URL=http://localhost:3001/api npx jest acceptance
