--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - '3001:3000'
     environment:
-      DB_URL: postgres://postgres:postgres@postgres:5432/magazine
+      DB_URL: postgres://postgres:postgres@postgres:5432/postgres
     depends_on:
       - postgres
 
