add update article implementation

--- a/dev.env
+++ b/dev.env
@@ -9,7 +9,7 @@ DB_PORT=5432
 DB_DBNAME=conduitdb
 DB_DBNAME_TEST=conduitdb_test
 MIGRATION_PATH=db/migration
-DB_RECREATE=true
+DB_RECREATE=false
 
 API_SECRET=randomapisecretwithatleast32characters
 TOKEN_HOUR_LIFESPAN=24h
