--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,15 +4,26 @@ services:
     ports:
       - '3001:3000'
     environment:
-      DB_URL: postgres://postgres:postgres@postgres:5432/postgres
+      DB_URL: mysql://realworld:realworld@mysql:3306
     depends_on:
       - postgres
 
   postgres:
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_USER: realworld
+      POSTGRES_PASSWORD: realworld
+      POSTGRES_DB: realworld
     ports:
       - '5432:5432'
+
+  mysql:
+    image: 'mysql:5.6'
+    platform: linux/amd64
+    environment:
+      MYSQL_ROOT_PASSWORD: realworld
+      MYSQL_DATABASE: realworld
+      MYSQL_USER: realworld
+      MYSQL_PASSWORD: realworld
+    ports:
+      - '3306:3306'
