--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,7 +6,7 @@ sql:
     gen:
       go:
         package: "db"
-        sql_package: "database/sql"
+        sql_package: "pgx/v4"
         # sql_package: "database/sql"
         out: "./db/sqlc"
         emit_interface: true                 
