--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -14,7 +14,7 @@
         <Compile Include="Components\PageRegister.fs" />
         <Compile Include="Components\PageLogin.fs" />
         <Compile Include="Components\PageHome.fs" />
-        <Compile Include="Components\PageNewArticle.fs" />
+        <Compile Include="Components\PageWriteArticle.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
