add setting page skeleton

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -15,6 +15,7 @@
         <Compile Include="Components\PageLogin.fs" />
         <Compile Include="Components\PageHome.fs" />
         <Compile Include="Components\PageWriteArticle.fs" />
+        <Compile Include="Components\PageSettings.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
