chore: use zod for validation

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "rimraf": "^4.4.1",
     "rxjs": "^7.8.0",
     "typeorm": "0.3.12",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.19",
