--- a/.github/workflows/create-database.yml
+++ b/.github/workflows/create-database.yml
@@ -1,17 +1,15 @@
 name: 01 - Create Database
 
-on:
-  workflow_dispatch
+on: workflow_dispatch
 
 env:
   pscale_base_directory: .pscale
 
 jobs:
-
   create-database:
-    name: "Create database - click here"
+    name: 'Create database - click here'
     runs-on: ubuntu-latest
-        
+
     steps:
       - name: checkout
         uses: actions/checkout@v2
