--- a/.github/workflows/create-db-branch-and-pr-dr.yml
+++ b/.github/workflows/create-db-branch-and-pr-dr.yml
@@ -9,7 +9,7 @@ on:
       branch:
         description: DB and PR branch name
         required: true
-        default: "add-operation-column-and-index"
+        default: 'add-operation-column-and-index'
       ddl_statements:
         description: 'DDL statements to run in new branch'
         required: true
@@ -22,7 +22,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Validate parameters
         id: validate_params
         uses: actions/github-script@v3
@@ -49,9 +48,9 @@ jobs:
 
             core.setOutput('branch_name', branch_name);
             core.setOutput('ddl_statements', ddl_statements);
-      
+
       - name: Checkout
-        uses: actions/checkout@v2    
+        uses: actions/checkout@v2
 
       - name: Create DB branch and deploy request- if asked, please click on displayed link to authenticate
         id: create-db-branch-and-dr
@@ -65,12 +64,12 @@ jobs:
           DDL_STATEMENTS: ${{ steps.validate_params.outputs.ddl_statements }}
           BRANCH_NAME: ${{ steps.validate_params.outputs.branch_name }}
         working-directory: ${{env.pscale_base_directory}}/cli-helper-scripts/
-        run: | 
+        run: |
           ./create-db-branch-dr-and-connection.sh "$BRANCH_NAME" "$DDL_STATEMENTS"
 
       - name: Write information about associated PS database entities
         env:
-          BRANCH_NAME: ${{ steps.create-db-branch-and-dr.outputs.BRANCH_NAME }} 
+          BRANCH_NAME: ${{ steps.create-db-branch-and-dr.outputs.BRANCH_NAME }}
           DB_NAME: ${{ steps.create-db-branch-and-dr.outputs.DB_NAME }}
           ORG_NAME: ${{ steps.create-db-branch-and-dr.outputs.ORG_NAME }}
           DEPLOY_REQUEST_NUMBER: ${{ steps.create-db-branch-and-dr.outputs.DEPLOY_REQUEST_NUMBER }}
@@ -81,7 +80,7 @@ jobs:
           mkdir -p ../env/
           envsubst < ps-env-template.sh > ../env/ps-env-${BRANCH_NAME}.sh
           chmod a+x ../env/ps-env-${BRANCH_NAME}.sh
-          rm -f typescript 
+          rm -f typescript
 
       - name: Create corresponding Git branch and Pull Request
         id: create_pr
@@ -89,59 +88,59 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            branch: ${{ steps.validate_params.outputs.branch_name }}
-            title: ${{ steps.validate_params.outputs.branch_name }}
-            delete-branch: true
-            commit-message: "DDL statements for DB branch ${{ steps.validate_params.outputs.branch_name }}"
-            body: >
-              This PR contains the code changes needed to go along with the following database changes:
+          branch: ${{ steps.validate_params.outputs.branch_name }}
+          title: ${{ steps.validate_params.outputs.branch_name }}
+          delete-branch: true
+          commit-message: 'DDL statements for DB branch ${{ steps.validate_params.outputs.branch_name }}'
+          body: >
+            This PR contains the code changes needed to go along with the following database changes:
 
-              * :seedling: __DB-Branch__: [${{ steps.create-db-branch-and-dr.outputs.branch_name }}](${{ steps.create-db-branch-and-dr.outputs.BRANCH_URL }})
+            * :seedling: __DB-Branch__: [${{ steps.create-db-branch-and-dr.outputs.branch_name }}](${{ steps.create-db-branch-and-dr.outputs.BRANCH_URL }})
 
-              * :train2: __Deploy-Request URL__: ${{ steps.create-db-branch-and-dr.outputs.DEPLOY_REQUEST_URL }}
+            * :train2: __Deploy-Request URL__: ${{ steps.create-db-branch-and-dr.outputs.DEPLOY_REQUEST_URL }}
 
-              * :lock: __Branch connection info__: [One-time link](${{ steps.create-db-branch-and-dr.outputs.CONNECTION_STRING_LINK }})
+            * :lock: __Branch connection info__: [One-time link](${{ steps.create-db-branch-and-dr.outputs.CONNECTION_STRING_LINK }})
 
-              <details>
-              <summary>:computer: pscale CLI commands for local access</summary>
-
-
-              ```
-
-              pscale shell "${{ steps.create-db-branch-and-dr.outputs.DB_NAME }}" "${{ steps.create-db-branch-and-dr.outputs.BRANCH_NAME }}" --org "${{ steps.create-db-branch-and-dr.outputs.ORG_NAME }}"
-
-              pscale connect "${{ steps.create-db-branch-and-dr.outputs.DB_NAME }}" "${{ steps.create-db-branch-and-dr.outputs.BRANCH_NAME }}" --org "${{ steps.create-db-branch-and-dr.outputs.ORG_NAME }}"   
-              
-              ```
-
-              </details>
-
-              <details>
-              <summary>:scroll: Proposed DDL-Statements:</summary>
-
-              
-              ```
-
-              ${{ steps.validate_params.outputs.ddl_statements }}
-              
-              ```
-
-              </details>
-
-              
-              <details>
-              <summary>📖 Calculated schema changes:</summary>
+            <details>
+            <summary>:computer: pscale CLI commands for local access</summary>
 
 
-              ```
+            ```
 
-              ${{ steps.create-db-branch-and-dr.outputs.BRANCH_DIFF }}
-              ```
-              
-              </details>
-              
-              
-              If you are ok with the schema changes and have carefully reviewed them, you can merge them with a `/ps-merge` comment
+            pscale shell "${{ steps.create-db-branch-and-dr.outputs.DB_NAME }}" "${{ steps.create-db-branch-and-dr.outputs.BRANCH_NAME }}" --org "${{ steps.create-db-branch-and-dr.outputs.ORG_NAME }}"
+
+            pscale connect "${{ steps.create-db-branch-and-dr.outputs.DB_NAME }}" "${{ steps.create-db-branch-and-dr.outputs.BRANCH_NAME }}" --org "${{ steps.create-db-branch-and-dr.outputs.ORG_NAME }}"   
+
+            ```
+
+            </details>
+
+            <details>
+            <summary>:scroll: Proposed DDL-Statements:</summary>
+
+
+            ```
+
+            ${{ steps.validate_params.outputs.ddl_statements }}
+
+            ```
+
+            </details>
+
+
+            <details>
+            <summary>📖 Calculated schema changes:</summary>
+
+
+            ```
+
+            ${{ steps.create-db-branch-and-dr.outputs.BRANCH_DIFF }}
+            ```
+
+            </details>
+
+
+            If you are ok with the schema changes and have carefully reviewed them, you can merge them with a `/ps-merge` comment
 
       - name: Please check out branch and deployment request / PR created
         run: |
