--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,18 +12,16 @@ concurrency:
 jobs:
   test:
     services:
-      postgres:
-        image: postgres:13.2
+      mysql:
+        image: mysql:5.6
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          MYSQL_ROOT_PASSWORD: realworld
+          MYSQL_DATABASE: realworld
+          MYSQL_USER: realworld
+          MYSQL_PASSWORD: realworld
         ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          - '3306:3306'
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
