chore: add permissions

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
