--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,15 @@ services:
       MYSQL_PASSWORD: realworld
     ports:
       - '3306:3306'
+
+  localstack:
+    container_name: localstack
+    environment:
+      DEBUG: 1
+      DOCKER_HOST: unix:///var/run/docker.sock
+      DISABLE_CORS_CHECKS: 1
+    image: localstack/localstack:1.4
+    ports:
+      - '4566:4566'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
