--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -174,7 +174,7 @@ jobs:
       - working-directory: ./terraform/lambda
         id: terraform
         run: |
-          terraform apply --auto-aprove
+          terraform apply --auto-approve
           echo "API_URL=$(terraform output API_URL)" >> $GITHUB_OUTPUT
 
       - uses: actions/github-script@v6
@@ -207,7 +207,7 @@ jobs:
             -reconfigure \
             -backend-config="key=realworld-app/production/lambda.tfstate"
 
-          terraform apply --auto-aprove
+          terraform apply --auto-approve
           echo "API_URL=$(terraform output API_URL)" >> $GITHUB_OUTPUT
 
       - uses: actions/github-script@v6
