--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,230 +15,25 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-
-      - uses: ./.github/actions/npminstall
-
-      - run: |
-          ./scripts/package.sh
-          zip -r build.zip build
-        shell: bash
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: |
-            build.zip
+    uses: ./.github/workflows/build.yaml
 
   lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    uses: ./.github/workflows/lint.yaml
 
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-
-      - uses: ./.github/actions/npminstall
-
-      - name: Prettier
-        run: npx prettier --check .
-
-      - name: Typescript
-        run: npx tsc --noEmit
-
-  unit-tests:
-    services:
-      mysql:
-        image: mysql:5.6
-        env:
-          MYSQL_ROOT_PASSWORD: realworld
-          MYSQL_DATABASE: realworld
-          MYSQL_USER: realworld
-          MYSQL_PASSWORD: realworld
-        ports:
-          - '3306:3306'
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-
-      - uses: ./.github/actions/npminstall
-
-      - run: npm run test:unit
-        shell: bash
+  unit:
+    uses: ./.github/workflows/unit-tests.yaml
 
   server-tests:
     needs: [build]
-    services:
-      mysql:
-        image: mysql:5.6
-        env:
-          MYSQL_ROOT_PASSWORD: realworld
-          MYSQL_DATABASE: realworld
-          MYSQL_USER: realworld
-          MYSQL_PASSWORD: realworld
-        ports:
-          - '3306:3306'
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: build
-
-      - name: Starting localhost server
-        shell: sh
-        run: |
-          unzip build.zip
-          nohup node build/server &
-          ./scripts/wait_for_status.sh http://localhost:3000/api/checks/readiness 200
-
-      - uses: ./.github/actions/npminstall
-
-      - name: Running acceptance tests on localhost server
-        run: API_URL=http://localhost:3000/api npx jest acceptance
+    uses: ./.github/workflows/acceptance-local-tests.yaml
 
   docker-tests:
-    services:
-      mysql:
-        image: mysql:5.6
-        env:
-          MYSQL_ROOT_PASSWORD: realworld
-          MYSQL_DATABASE: realworld
-          MYSQL_USER: realworld
-          MYSQL_PASSWORD: realworld
-        ports:
-          - '3306:3306'
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: docker/setup-buildx-action@v2
-
-      - name: Build docker image
-        uses: docker/build-push-action@v3
-        with:
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          load: true
-          push: false
-          tags: 'app'
-
-      - name: Starting docker server
-        shell: sh
-        run: |
-          nohup docker run --rm --network=host --env API_PORT=3001 app &
-          ./scripts/wait_for_status.sh http://localhost:3001/api/checks/readiness 200
-
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-
-      - uses: ./.github/actions/npminstall
-
-      - name: Running acceptance tests on docker server
-        run: API_URL=http://localhost:3001/api npx jest acceptance
+    uses: ./.github/workflows/acceptance-docker-tests.yaml
 
   localstack-tests:
     needs: [build]
-    runs-on: ubuntu-latest
-    services:
-      localstack:
-        env:
-          DEBUG: 1
-          DOCKER_HOST: unix:///var/run/docker.sock
-        image: localstack/localstack:1.4
-        ports:
-          - '4566:4566'
-        volumes:
-          - /var/run/docker.sock:/var/run/docker.sock
-      mysql:
-        image: mysql:5.6
-        env:
-          MYSQL_ROOT_PASSWORD: realworld
-          MYSQL_DATABASE: realworld
-          MYSQL_USER: realworld
-          MYSQL_PASSWORD: realworld
-        ports:
-          - '3306:3306'
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/credentials
-      - uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.4.4
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-      - uses: ./.github/actions/npminstall
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: build
-
-      - working-directory: ./terraform/lambda
-        id: terraform
-        run: |
-          terraform apply --auto-approve
-          echo "API_URL=$(terraform output API_URL)" >> $GITHUB_OUTPUT
-
-      - uses: actions/github-script@v6
-        with:
-          script: |
-            core.notice('Check URL ${{ steps.terraform.outputs.API_URL }}')
+    uses: ./.github/workflows/acceptance-localstack-tests.yaml
 
   deploy:
     needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: ./.github/actions/credentials
-
-      - uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.4.4
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: build
-
-      - working-directory: ./terraform/lambda
-        id: terraform
-        run: |
-          terraform init \
-            -upgrade \
-            -reconfigure \
-            -backend-config="key=realworld-app/production/lambda.tfstate"
-
-          terraform apply --auto-approve
-          echo "API_URL=$(terraform output API_URL)" >> $GITHUB_OUTPUT
-
-      - uses: actions/github-script@v6
-        with:
-          script: |
-            core.notice('Check URL ${{ steps.terraform.outputs.API_URL }}')
+    uses: ./.github/workflows/deploy-lambda.yaml
