--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -15,25 +15,32 @@ concurrency:
 
 jobs:
   build:
+    name: Build
     uses: ./.github/workflows/build.yaml
 
   lint:
+    name: Lint
     uses: ./.github/workflows/lint.yaml
 
   unit:
+    name: Unit Tests
     uses: ./.github/workflows/unit-tests.yaml
 
   server-tests:
     needs: [build]
+    name: Acceptance Tests on Local Server
     uses: ./.github/workflows/acceptance-local-tests.yaml
 
   docker-tests:
+    name: Acceptance Tests on Docker Server
     uses: ./.github/workflows/acceptance-docker-tests.yaml
 
   localstack-tests:
+    name: Acceptance Tests on Localstack
     needs: [build]
     uses: ./.github/workflows/acceptance-localstack-tests.yaml
 
   deploy:
+    name: Deploy
     needs: [build]
     uses: ./.github/workflows/deploy-lambda.yaml
