--- a/.github/workflows/acceptance-localstack-tests.yaml
+++ b/.github/workflows/acceptance-localstack-tests.yaml
@@ -45,7 +45,7 @@ jobs:
       - working-directory: ./terraform/lambda
         id: terraform
         run: |
-          terraform apply --auto-approve
+          ./localstack.sh
           echo "API_URL=$(terraform output API_URL)" >> $GITHUB_OUTPUT
 
       - uses: actions/github-script@v6
