--- a/.github/workflows/acceptance-localstack-tests.yaml
+++ b/.github/workflows/acceptance-localstack-tests.yaml
@@ -52,3 +52,6 @@ jobs:
         with:
           script: |
             core.notice('Check URL ${{ steps.terraform.outputs.API_URL }}')
+
+      - run: |          
+          ./scripts/wait_for_status.sh ${{ steps.terraform.outputs.API_URL }}/api/checks/readiness 200
