chore: use tflocal

--- a/.github/workflows/acceptance-localstack-tests.yaml
+++ b/.github/workflows/acceptance-localstack-tests.yaml
@@ -45,6 +45,7 @@ jobs:
       - working-directory: ./terraform/lambda
         id: terraform
         run: |
+          pipx install tflocal
           ./localstack.sh
           echo "API_URL=$(terraform output -raw API_URL)" >> $GITHUB_OUTPUT
 
